Major fixes, added Personaggi

--- a/include/articles/considerazioni_1.html
+++ b/include/articles/considerazioni_1.html
@@ -11,27 +11,31 @@
 						<div class="person">&mdash; Yumi Matsutoya</div>
 						<p>Indubbiamente i processi creativi che conducono all'ideazione di un personaggio possono risultare una sfida davvero complicata anche per il più esperto dei creativi, ma credo che l'abilità di Miyazaki nel fondere il cinema d'animazione con dei personaggi indimenticabili faccia sembrare tutto molto semplice, quasi naturale. Riesce infatti a conferire alcuni tratti distintivi che si imprimono a fuoco nella mente e nel cuore dello spettatore; dettagli estetici di grande impatto visivo che riflettono il carattere del personaggio, scelte di doppiaggio incisive e poetiche, citazioni che travolgono lo spettatore come un treno in corsa sono solo alcuni degli elementi che contribuiscono a dare vita ai personaggi di tutta la produzione cinematografica Miyazakiana (per non parlare del vento, che pur non avendo né forma né voce è sempre percepibile come un vero e proprio protagonista in ogni pellicola). Personaggi come Yubaba de <i>"La Città Incantata"</i> (<i>"Sen to Chihiro no kamikakushi"</i>, 2001) o Marco Pagot di <i>"Porco Rosso"</i> (<i>"Kurenai no Buta"</i>, 1992) assumono un peso specifico rilevante nella mente del fruitore. L'esagerazione delle proporzioni della testa della strega delle terme e i gioielli che ne adornano la figura proiettano un'immagine contorta e sfarzosa; allo stesso modo il cacciatore di pirati e i suoi tratti suini suggeriscono un aspetto buffo ma anche un po' tormentato, che racconta una storia, e il tutto viene impreziosito da alcune citazioni tanto forti quanto indelebili.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/yubaba.jpg" target="_blank"><img src="../media/img/yubaba_min.jpg" alt="Yubaba da La Città Incantata"></a>
+							<p class="didascalia">Yubaba da "La Città Incantata"</p>
 						</div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/porcorosso.jpg" target="_blank"><img src="../media/img/porcorosso_min.jpg" alt="Marco Pagot da Porco Rosso"></a>
+							<p class="didascalia">Marco Pagot da "Porco Rosso"</p>
 						</div>
-						<p>In <i>"Si Alza il Vento"</i> un personaggio molto interessante nei tratti estetici è sicuramente il direttore Kurokawa, un uomo di statura quasi lillipuziana che contrasta con la sua personalità forte e rigida, adornata da una capigliatura buffa che sembra voler stemperare la sua severità per farci intravedere il suo lato onesto e gentile. È un personaggio che vive un paradosso al tempo stesso estetico e interiore, un elemento piuttosto ricorrente in tutto il film.</p>
+						<p>In <i>Si Alza il Vento</i> un personaggio molto interessante nei tratti estetici è sicuramente il direttore Kurokawa, un uomo di statura quasi lillipuziana che contrasta con la sua personalità forte e rigida, adornata da una capigliatura buffa che sembra voler stemperare la sua severità per farci intravedere il suo lato onesto e gentile. È un personaggio che vive un paradosso al tempo stesso estetico e interiore, un elemento piuttosto ricorrente in tutto il film.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/considerazioni01.png" target="_blank"><img src="../media/img/considerazioni01.jpg" alt=""></a>
 						</div>
 						<p>Un altro aspetto molto importante che va ad influire notevolmente sull'attendibilità degli universi narrativi di Miyazaki è la cura con cui vengono inseriti gli animali e le creature. Basti pensare ai movimenti meccanici dei robot di <i>"Laputa: Castello nel cielo"</i> (<i>"Tenkū no shiro Rapyuta"</i>, 1986), animati in maniera perfetta, o anche alle creature ispirate dalla mitologia giapponese presenti in <i>"Principessa Mononoke"</i> e <i>"La Città Incantata"</i>, di cui il regista e il suo staff hanno studiato persino i comportamenti per riprodurli il più fedelmente possibile.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/laputa.jpg" target="_blank"><img src="../media/img/laputa_min.jpg" alt="I robot di Laputa Castello nel Cielo"></a>
+							<p class="didascalia">I robot di "Laputa: Castello nel Cielo"</p>
 						</div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/mononoke.jpg" target="_blank"><img src="../media/img/mononoke_min.jpg" alt="Sen e i lupi da Principessa Mononoke"></a>
+							<p class="didascalia">Sen e i lupi da "Principessa Mononoke"</p>
 						</div>
 						<p>Persino il cibo ha un'anima! Ed è riprodotto in maniera eccellente, i colori sono vividi e curati e fanno venire l'acquolina in bocca. È un po' come andare a fare la spesa al supermercato quando si è affamati: tutto risulta così appetitoso che compreremmo qualsiasi cosa, e allo stesso modo la scena della colazione de <i>"Il Castello Errante di Howl"</i> fa venire voglia di alzarsi, mettersi ai fornelli e cucinare uova e pancetta.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/food.gif" target="_blank"><img src="../media/img/food.gif" alt="Colazione di Howl"></a>
 						</div>
-						<p>Quello che più mi ha colpito in <i>"Si Alza il Vento"</i> è proprio il fatto che Miyazaki sia riuscito a inserire tutti gli elementi tipici del suo cinema, malgrado il "salto nel vuoto" compiuto in termini di ambientazione. Mentre l'elemento fantasy si è sempre sposato alla perfezione con i personaggi animati ed era ormai un meccanismo ben oliato, il regista ha scelto di intraprendere una via diversa rispetto al solito, esponendosi ad un rischio non indifferente; ha infatti inserito molti elementi del tutto inediti per una sua produzione, come la scelta di inserire un personaggio realmente esistito o quella di coprire un arco temporale molto più lungo del solito nel corso della narrazione.</p>
+						<p>Quello che più mi ha colpito in <i>Si Alza il Vento</i> è proprio il fatto che Miyazaki sia riuscito a inserire tutti gli elementi tipici del suo cinema, malgrado il "salto nel vuoto" compiuto in termini di ambientazione. Mentre l'elemento fantasy si è sempre sposato alla perfezione con i personaggi animati ed era ormai un meccanismo ben oliato, il regista ha scelto di intraprendere una via diversa rispetto al solito, esponendosi ad un rischio non indifferente; ha infatti inserito molti elementi del tutto inediti per una sua produzione, come la scelta di inserire un personaggio realmente esistito o quella di coprire un arco temporale molto più lungo del solito nel corso della narrazione.</p>
 						<p>Come accennato in precedenza in effetti, alcuni dei suoi fan non hanno accolto con grande entusiasmo questa sua scelta, ma credo che tramite il suo ultimo lungometraggio Miyazaki volesse regalarci un importante riparo contro la bufera imminente, un luogo sicuro in cui rifugiarci e cercare delle risposte in un momento difficile, un po' come fa Caproni con Jiro.</p>
 						<p>I film di Miyazaki per me saranno sempre un meraviglioso mondo dei sogni, in cui chiederò idealmente consiglio al maestro, in una sorta di dialogo immaginario che ricorda parecchio le conversazioni tra Jiro e Caproni all'interno della pellicola.</p>
 						<div class="colonne clearfix">
