--- a/include/articles/critica_2.html
+++ b/include/articles/critica_2.html
@@ -7,12 +7,12 @@
 						<p>Passando invece a delle critiche legate maggiormente al lato cinematografico, ho letto in rete pareri decisamente positivi sulla pellicola, ma mi è capitato anche di leggere di persone che si sentivano confuse in merito al ritmo del film e ad alcune sezioni che vengono definite inutili o addirittura ridondanti.</p>
 						<p>Il soggiorno montano di Jiro per esempio è stato accusato dal pubblico di essere denso di scene inconcludenti, quasi inserite appositamente per "allungare il brodo"; in particolar modo quella in cui il nostro progettista fa volare sul balcone dell'amata gli aeroplanini di carta. A mio parere queste sequenze sono state inserite dal regista per fornire attimi di sorrisi anche allo spettatore: sono momenti costituiti da una forte leggiadrìa sognatrice, in cui ci sembra di dimenticare per un attimo la malattia di Nahoko, così come fanno i protagonisti. Una delle pochissime scene caratterizzate da un certo senso di gioiosa spensieratezza che racchiude sia lo spettatore che i personaggi in una sorta di bolla di sapone, ovattando così l'eco dei problemi che la vita ci pone davanti.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/critica05.png" target="_blank"><img src="../media/img/critica05.jpg" alt=""></a>
 						</div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/critica06.png" target="_blank"><img src="../media/img/critica06.jpg" alt=""></a>
 						</div>
-						<p>La critica più diffusa però riguarda sicuramente il ritmo del film, che secondo alcuni sarebbe troppo lento e farcito di nozioni che portano poco ai fini della trama. Posso effettivamente comprendere come la pellicola sembri quasi divisa in due metà, nella prima delle quali abbiamo una predominanza di contesto storico &mdash; in cui però non bisogna dimenticarsi il fatto che il regista ci fa idealmente stringere la mano a Jiro, un personaggio che voleva dipingere come totalmente umano, delineandone il carattere in maniera molto accurata &mdash; mentre nella seconda possiamo seguire le vicende di Nahoko, che ci terrano con il fiato sospeso fino alla fine.</p>
+						<p>La critica più diffusa però riguarda sicuramente il ritmo del film, che secondo alcuni sarebbe troppo lento e farcito di nozioni che portano poco ai fini della trama. Posso effettivamente comprendere come la pellicola sembri quasi divisa in due metà, nella prima delle quali abbiamo una predominanza di contesto storico &ndash; in cui però non bisogna dimenticarsi il fatto che il regista ci fa idealmente stringere la mano a Jiro, un personaggio che voleva dipingere come totalmente umano, delineandone il carattere in maniera molto accurata &ndash; mentre nella seconda possiamo seguire le vicende di Nahoko, che ci terrano con il fiato sospeso fino alla fine.</p>
 						<p>Il ritmo della narrazione in generale è stato preso di mira per gli apparenti momenti morti, in cui il regista si sofferma forse troppo a lungo su inquadrature statiche o senza dialoghi, che tendono ad annoiare alcuni spettatori. Vorrei sottolineare tuttavia come questi silenzi profondi nascondano in realtà un dialogo intenso con il comparto sonoro, che si distingue ancora una volta per la sua efficacia: risulta sempre evocativo ed incalzante, forse caratterizzato da un tono un po' più malinconico rispetto ad altre produzioni Ghibli, ma non per questo meno emozionante, anzi.</p>
 						<p>Vorrei spendere due parole anche sull'intero comparto sonoro del film, affidato ancora una volta al compositore storico dello studio Joe Hisaishi e arricchito dal singolo della cantante giapponese Yumi Matsutoya <i>"Hikōki-gumo"</i>; una vera e propria perla che va ad impreziosire e ad accompagnare i titoli di coda del film, risultando particolarmente adatta al destino della povera Nahoko:</p>
 						<div class="colonne clearfix">
@@ -57,6 +57,14 @@
 								la sua giovane vita è... una scia d'aeroplano!</p>
 							</div>
 						</div>
+						<div class="media">
+							<video controls preload="metadata">
+								<source src="../media/video/trailer.mp4" type="video/mp4">
+								<source src="../media/video/trailer.webm" type="video/webm">
+								Il file video non funziona? Scaricalo <a href="../media/audio/trailer.mp4">qui</a>.
+							</video>
+							<p class="didascalia">Il video ufficiale di "Hikōki-gumo", che mostra alcune scene del film e dello Studio.</p>
+						</div>
 						<p>Non posso inoltre sorvolare sui suoni prodotti dagli aerei, realizzati con voci umane, come già accennato per quanto riguarda gli effetti sonori legati al terremoto del Kanto. La voce dei motori, il librarsi nel cielo, il rumore dei meccanismi di accensione sono tutti elementi che soffiano vita nei velivoli, quasi a dargli una coscienza propria. L'ennesima emozione da brividi che ci regala il maestro.</p>
 						<div class="media">
 							<audio controls preload="metadata">
@@ -75,14 +83,14 @@
 						<p class="curiosita"><b>Curiosità:</b> L'intero comparto audio è stato mixato in mono, e non in stereo o addirittura multicanale; una scelta particolare, che ha destato numerose perplessità da parte dei più "tecnici". Dopo qualche attimo di riflessione sono giunto alla conclusione che il maestro forse voleva contestualizzare persino la traccia audio della sua pellicola, quasi a voler ricordare che una vicenda narrata negli anni '30 richiede tecniche di registrazione audio "old school".</p>
 						<p>Prima di concludere questo capitolo dedicato alla critica vorrei ringraziare tutto lo staff dello Studio che, sotto la direzione attenta del maestro, lavora duramente per regalarci delle tavole meravigliose dai colori vividi ed evocativi, una gioia per il cuore (l'azzurro del cielo e il verde dei prati sconfinati trasmettono un particolare senso di infinito). Parlo, ad esempio, dei dettagli del regolo calcolatore che diventa un vero e proprio tratto distintivo di Jiro, nonché della cura riposta nel riportare su schermo tutti i calcoli matematici e i disegni tecnici tipici del mestiere di progettista.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/critica07.png" target="_blank"><img src="../media/img/critica07.jpg" alt=""></a>
 						</div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/critica08.png" target="_blank"><img src="../media/img/critica08.jpg" alt=""></a>
 						</div>
 						<p class="curiosita"><b>Curiosità:</b> Nella scena in cui Jiro riceve il suo primo incarico alla Mitsubishi possiamo notare che condivide l'ufficio con molti altri progettisti che il regista ci mostra impassibili e sempre al lavoro, chinati sulle proprie scrivanie. Una piccola chicca che potrebbe riferirsi ai lavoratori stessi dello Studio.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/critica09.png" target="_blank"><img src="../media/img/critica09.jpg" alt=""></a>
 						</div>
 						<p>Il produttore storico Toshio Suzuki sostiene che in fin dei conti ciò che importa veramente in ambito lavorativo è circondarsi di persone fantastiche. Beh, direi che se facessimo la conta dei presenti potremmo constatare che il Ghibli e il suo staff hanno scelto divinamente: il frutto degli sforzi di un ambiente lavorativo così minuzioso e appassionato <b>si nota eccome</b>.
 						<div class="colonne clearfix">
