--- a/include/articles/home.html
+++ b/include/articles/home.html
@@ -1,13 +1,10 @@
 <header class="clearfix" id="bg-home">
-					<h1>SI ALZA IL VENTO</h1>
+					<h1></h1>
 				</header>
 				<section>
 					<article>
-						<h2>Home page</h2>
-						<p>testo</p>
-						<div class="colonne clearfix">
-							<div class="next">
-								<a href="prefazione">Inizia la lettura &rarr;</a>
-							</div>
-						</div>
+						<h1>Si Alza il Vento</h1>
+						<h2>Un film per il cuore ancora prima che per gli occhi</h2>
+						<h3>Analisi personale dell'opera e delle sue tematiche</h3>
+						<h4>a cura di Andrea Di Nuzzo<br>Hintclub S.r.l.s.</h4>
 					</article>
