--- a/include/articles/introduzione.html
+++ b/include/articles/introduzione.html
@@ -1,16 +1,62 @@
 <header class="clearfix" id="bg-intro">
-					<h1>SI ALZA IL VENTO</h1>
+					<h1>INTRODUZIONE</h1>
 				</header>
 				<section>
 					<article>
-						<h2>Introduzione</h2>
-						<p>testo</p>
+						<h2>Il film</h2>
+						<div class="media">
+							<a href="../media/img/locandina.png" target="_blank"><img src="../media/img/locandina.jpg" alt=""></a>
+						</div>
+						<table>
+							<tr>
+								<th>Titolo originale</th>
+								<td><i>Kaze tachinu</i></td>
+							</tr>
+							<tr>
+								<th>Regia</th>
+								<td>Hayao Miyazaki</td>
+							</tr>
+							<tr>
+								<th>Colonna sonora</th>
+								<td>Joe Hisaishi</td>
+							</tr>
+							<tr>
+								<th>Produzione</th>
+								<td>Studio Ghibli</td>
+							</tr>
+							<tr>
+								<th>Data di uscita italiana</th>
+								<td>13 settembre 2014</td>
+							</tr>
+							<tr>
+								<th>Durata</th>
+								<td>127 min ca.</td>
+							</tr>
+							<tr>
+								<th>Genere</th>
+								<td>Animazione</td>
+							</tr>
+						</table>
+						<div class="person"></div>
+						<p class="curiosita"><b>Sinossi:</b> Jiro Horikoshi è un progettista di aeroplani vissuto all'inizio del '900, un periodo storico piuttosto oscuro per il genere umano e in particolare per il Giappone, patria del regista Miyazaki. Una serie di situazioni spiacevoli e il rapporto onirico con uno dei più grandi rappresentanti dell'aviazione italiana, il Conte Giovanni Battista Caproni, saranno il motore della narrazione e condurranno il protagonista tra le braccia di una dolcissima fanciulla, Nahoko Satomi.</p>
+						<p>Benchè questo lavoro parta con una scheda tecnica del film, non è mia intenzione recensire la pellicola, bensì fornire un'accurata analisi strutturata che si prefissa due principali obbiettivi:</p>
+						<ol>
+							<li>Sviluppare gli argomenti trattati nel film secondo la mia personale percezione.</li>
+							<li>Raccontare le emozioni che ha suscitato in me, parlando a cuore aperto.</li>
+						</ol>
+						<div class="person"></div>
+						<h2>Perchè parlarne proprio ora, a diversi mesi dall'uscita nelle sale italiane?</h2>
+						<p>Semplice. Perché proprio come ogni film dello Studio Ghibli ritengo sia possibile coglierne l'effettivo valore soltanto dopo almeno quattro o cinque visioni, seguite da alcuni momenti di riflessione. Ora, è chiaro come questa caratteristica tipica dei film dello Studio, e del Maestro Miyazaki in particolare, possa far storcere il naso a chi non è abituato ad un modo così introspettivo di fare cinema; ma credetemi quando vi dico che la questione è molto più radicata nelle abitudini della società odierna di quanto sia lecito aspettarsi, ed è proprio per questo motivo che la pellicola acquista grande valore.</p>
+						<p>Approfondiremo al meglio l'argomento verso la fine della nostra analisi, poiché è uno dei motivi che mi hanno spinto a scrivere di questo ultimo lungometraggio del grande regista nipponico.</p>
+						<div class="person"></div>
+						<h2>Spoiler alert</h2>
+						<p>Per la sua natura di analisi quest'opera contiene grandi quantità di spoiler sul film. Per questo, e anche per comprendere meglio l'analisi e i riferimenti che a volte non mi dilungo a spiegare, la lettura è caldamente consigliata a chi ha visto il film. Se non l'avete fatto potete (<i>dovete!</i>) rimediare in fretta: <a href="bluray">qui trovate la scheda tecnica dell'edizione Blu-ray e i link per acquistarla da Amazon</a>.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
 								<a href="prefazione">&larr; Pagina precedente</a>
 							</div>
 							<div class="next">
-								<a href="tema_storico">Pagina successiva &rarr;</a>
+								<a href="personaggi">Pagina successiva &rarr;</a>
 							</div>
 						</div>
 					</article>
