--- a/include/articles/miyazaki.html
+++ b/include/articles/miyazaki.html
@@ -6,13 +6,15 @@
 						<h2>La presenza del regista all'interno del film: l'essenza di Miyazaki</h2>
 						<p>Gli elementi che hanno ispirato la pellicola sono svariati e hanno avuto tutti un ruolo importante nell'alchimia del film. Miyazaki è stato in grado di prendere diversi spunti storici, letterari e artistici, anche apparentemente slegati tra di loro, e di mescolarli insieme in un cocktail fatto di emozioni e passione.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/manga.jpg" target="_blank"><img src="../media/img/manga_min.jpg" alt="Una delle tavole del manga Kaze Tachinu di Miyazaki"></a>
+							<p class="didascalia">Una delle tavole del manga Kaze Tachinu di Miyazaki.</p>
 						</div>
-						<p>Forse non tutti sanno che il film è nato da un breve manga disegnato dallo stesso regista (intitolato proprio <i>"Kaze Tachinu"</i> come il film) per la rivista Model Graphix, un magazine dedicato al modellismo in Giappone. In esso veniva raccontata la storia di Jiro fino alla costruzione del primo Zero, mescolata ad elementi tratti dall'omonimo romanzo di Tatsuo Hori, nel quale lo scrittore nipponico raccontava la sua esperienza di vita con la fidanzata malata di tubercolosi. La traduzione occidentale del titolo è stata invece tratta da un'opera dello scrittore e poeta francese Paul Valéry, <i>"Le Cimetière marin"</i>.</p>
+						<p>Forse non tutti sanno che il film è nato da un breve manga disegnato dallo stesso regista &ndash; intitolato proprio <i>"Kaze Tachinu"</i> come il film &ndash; per la rivista Model Graphix, un magazine giapponese dedicato al modellismo. In esso veniva raccontata la storia di Jiro fino alla costruzione del primo Zero, mescolata ad elementi tratti dall'omonimo romanzo di Tatsuo Hori, nel quale lo scrittore nipponico raccontava la sua esperienza di vita con la fidanzata malata di tubercolosi. La traduzione occidentale del titolo è stata invece tratta da un'opera dello scrittore e poeta francese Paul Valéry, <i>"Le Cimetière marin"</i>.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/romanzo.jpg" target="_blank"><img src="../media/img/romanzo_min.jpg" alt="Romanzo Si Alza il Vento di Tatsuo Hori"></a>
+							<p class="didascalia">Il romanzo "Si Alza il Vento" di Tatsuo Hori.<br><a href="http://www.amazon.it/dp/8898002629/">Clicca qui per acquistarlo su Amazon</a>.</p>
 						</div>
-						<p>Vi è inoltre un interessante spunto di riflessione nello stesso manga, uscito nel 2009, che ci fa notare come Miyazaki avesse curiosamente dipinto Jiro e i suoi colleghi progettisti con tratti suini, quasi a condannarne le azioni scellerate.</p>
+						<p>Vi è inoltre un interessante spunto di riflessione nello stesso manga, pubblicato nel 2009, che ci fa notare come Miyazaki avesse curiosamente dipinto Jiro e i suoi colleghi progettisti con tratti suini, quasi a condannarne le azioni scellerate.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
 								<a href="tema_amoroso_3">&larr; Pagina precedente</a>
