--- a/include/articles/miyazaki_5.html
+++ b/include/articles/miyazaki_5.html
@@ -7,36 +7,38 @@
 						<p>Abbiamo già citato in precedenza il personaggio di Honjo, amico e collega di Jiro: è lui che lo introduce alla ditta per cui lavorerà per molto tempo, che lo vedrà poi diventare anche ingegnere capo, ed è sempre lui che fornisce alcuni degli spunti di riflessione più interessanti nel corso dell'intera pellicola (come analizzato nel capitolo sul tema amoroso); come promesso dunque torniamo a parlare di lui, poiché credo ne valga assolutamente la pena.</p>
 						<p>Durante tutto l'arco della narrazione vediamo come il rapporto tra lui e Jiro sia molto importante per la crescita personale di entrambi i personaggi; dai dialoghi tra i due infatti emergono sia delle differenze caratteriali importanti, sia una forte stima reciproca che li condurrà a realizzare importanti traguardi nel proprio lavoro, anche se avvolti dal dilemma etico di cui abbiamo già ampiamente discusso in precedenza. Questa rappresentazione descritta dal regista nipponico sembra infatti ripercorrere un po' un altro importante elemento della vita di Miyazaki: il suo rapporto con Isao Takahata, co-fondatore dello Studio Ghibli.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/takahata.jpg" target="_blank"><img src="../media/img/takahata_min.jpg" alt="Isao Takahata"></a>
+							<p class="didascalia">Isao Takahata</p>
 						</div>
 						<p>Il loro parallelismo con Jiro e Honjo è sicuramente un riferimento piuttosto velato, ma credo che sia anche uno dei motori che spingono entrambi i personaggi all'interno del cuore dello spettatore attraverso alcuni momenti particolarmente significativi che ci mostrano quanto può essere importante il ruolo di un antagonista, sia all'interno di una pellicola cinematografica che in un qualsivoglia ambito lavorativo.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/miyazaki14.png" target="_blank"><img src="../media/img/miyazaki14.jpg" alt=""></a>
 						</div>
 						<p>Nella scena della caffetteria dello stabilimento della Mitsubishi, quando a Jiro viene assegnato il suo primo incarico da ingegnere capo, il direttore Kurokawa fa una curiosa affermazione alla richiesta di Jiro di avere Honjo nel team di lavoro del progetto:</p>
-						<div class="quote">"Pessima idea, finirete per competere tra di voi..."</div>
+						<div class="quote">"Lascia perdere. Tra coetanei si è rivali... Mettili insieme e si perde l'amicizia."</div>
 						<div class="person"></div>
 						<p>Il monito del direttore, in un primo momento, sembra una proibizione fine a sé stessa, ma nel corso della narrazione scopriamo invece come Honjo e Jiro, pur essendo legati da una profonda amicizia e stima reciproca, rimangano sempre concentrati su progetti differenti, seguendo ognuno il proprio buon gusto; Jiro segue infatti le sue spine di sgombro e i suoi design radicali, mentre Honjo, per sua stessa ammissione, rimane parecchio influenzato dallo stile Junkers. Malgrado questa differenza però i due sono sempre di continuo incoraggiamento l'uno per l'altro, sia in termini lavorativi e tecnici sia nei momenti personali più difficili.</p>
 						<p>Nella scena che ci mostra Jiro tornare al lavoro dopo il soggiorno montano che lo ha ricongiunto con Nahoko, lo vediamo entrare nell'hangar di assemblaggio dove Honjo sta cotruendo uno dei suoi progetti; il nostro protagonista gli mostra uno dei suoi design che comprende alcune soluzioni tecniche rivoluzionarie, suggerendogli di utilizzarle sul suo aeroplano, ma Honjo rifiuta gentilmente dicendo che non li userà fino a che non sarà lo stesso Jiro a implementarli nel suo prossimo velivolo.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/miyazaki15.png" target="_blank"><img src="../media/img/miyazaki15.jpg" alt=""></a>
 						</div>
-						<p>Possiamo dunque definire i due progettisti come amichevoli rivali, i quali vengono stimolati reciprocamente dal lavoro dell'altro, un sentimento che li porta a realizzare aerei diversi ma qualitativamente sempre eccelsi.</p>
+						<p>Possiamo dunque definire i due progettisti come amichevoli rivali, stimolati reciprocamente dal lavoro dell'altro, un sentimento che li porta a realizzare aerei diversi ma qualitativamente sempre eccelsi.</p>
 						<p>Chi definirebbe in questo modo anche il rapporto tra Miyazaki e Takahata è proprio Toshio Suzuki, che conosce entrambi piuttosto bene, e ha provato a spiegare il sentimento che lega i due registi durante una conferenza stampa:</p>
 						<div class="quote">"Volendo spiegare un po' il loro rapporto, parto dicendo che Takahata è cinque anni più vecchio di Miyazaki, e quando quest'ultimo iniziava a muovere i primi passi nel mondo dell'industria cinematografica fu proprio Takahata a scoprirne il talento. Miyazaki iniziò come suo apprendista e lavorarono insieme su alcuni film. [...] Non ci sono dubbi al riguardo, sono rivali. Amichevoli rivali."</div>
 						<div class="person">&mdash; Toshio Suzuki</div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/miyazaki_takahata.jpg" target="_blank"><img src="../media/img/miyazaki_takahata_min.jpg" alt="Miyazaki e Takahata nel 2010, in una foto promozionale relativa alla pubblicazione di Arrietty - Il mondo segreto sotto il pavimento"></a>
+							<p class="didascalia">Miyazaki e Takahata nel 2010, in una foto promozionale relativa alla pubblicazione di "Arrietty - Il mondo segreto sotto il pavimento" ("Karigurashi no Arrietty")</p>
 						</div>
 						<p>Ecco quindi dove si inizia a percepire un certo parallelismo con Jiro e Honjo. È stato proprio quest'ultimo infatti a introdurre il nostro protagonista alla Mitsubishi: è andato a prenderlo in stazione a Nagoya, gli ha descritto la nuova realtà in cui si stava per calare (basti pensare alle spiegazioni che fa in merito alla chiusura delle banche e allo spostamento di massa della popolazione dalla campagna alle grandi città), e infine lo ha accompagnato fino alla sede, dove probabilmente lui lavorava già da qualche tempo vista la sua dimestichezza con gli ambienti di lavoro. Sono i piccoli dettagli che Miyazaki inserisce con la sua consueta maestria che ci fanno intendere che sia stato proprio Honjo a prendere Jiro sotto la sua ala: possiamo intuirlo dagli sguardi di complicità che gli rivolge, dal fatto che lo stesso direttore Kurokawa definisca Jiro come il "genio di cui abbiamo tanto sentito parlare".</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/miyazaki16.png" target="_blank"><img src="../media/img/miyazaki16.jpg" alt=""></a>
 						</div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/miyazaki17.png" target="_blank"><img src="../media/img/miyazaki17.jpg" alt=""></a>
 						</div>
 						<p>Nel documentario <i>"The Kingdom of Dreams and Madness"</i> infatti ci viene raccontato di come Takahata trovò il suo primo impiego alla Toei Animation, e di come Miyazaki si unì a lui quattro anni dopo; fu così che ebbe inizio il binomio che condusse alla creazione dello Studio Ghibli.</p>
-						<p>È possibile che il punto d'incontro tra i binomi Jiro-Honjo e Miyazaki-Takahata sia "soltanto" questo, ma posso sicuramente capire perchè <i>"Si Alza il Vento"</i> abbia fatto versare qualche lacrima al maestro. Risulta evidente che in questa pellicola Miyazaki abbia riversato davvero tutto sé stesso, e ci terrei a ringraziarlo personalmente per aver condiviso gran parte della sua storia personale con tutto il suo pubblico. Non dev'essere stato per niente facile.</p>
+						<p>È possibile che il punto d'incontro tra i binomi Jiro-Honjo e Miyazaki-Takahata sia "soltanto" questo, ma posso sicuramente capire perchè <i>Si Alza il Vento</i> abbia fatto versare qualche lacrima al maestro. Risulta evidente che in questa pellicola Miyazaki abbia riversato davvero tutto sé stesso, e ci terrei a ringraziarlo personalmente per aver condiviso gran parte della sua storia personale con tutto il suo pubblico. Non dev'essere stato per niente facile.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
 								<a href="miyazaki_4">&larr; Pagina precedente</a>
