--- a/include/articles/tema_amoroso.html
+++ b/include/articles/tema_amoroso.html
@@ -8,11 +8,11 @@
 						<div class="media">
 							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
 						</div>
-						<p>A mio modo di vedere, il tema amoroso non è mai così semplice da raccontare, ed è ancora più difficle da sviluppare, senza cadere ovviamente nel banale o nella storia d'amore "perfetta" e irrealizzabile, che risulta spesso alienante per il fruitore, il quale perde interesse nel narrato; il maestro invece riesce ancora una volta a costruire un rapporto che segue un ritmo preciso e uno stile raffinato che non ha quel classico sapore di "già visto". La loro è una relazione molto più realistica e immersiva di tante altre storie d'amore viste sul grande e piccolo schermo.</p>
+						<p>A mio modo di vedere il tema amoroso non è mai così semplice da raccontare, ed è ancora più difficle da sviluppare senza cadere ovviamente nel banale o nella storia d'amore "perfetta" e irrealizzabile, che risulta spesso alienante per il fruitore, il quale perde interesse nel narrato; il maestro invece riesce ancora una volta a costruire un rapporto che segue un ritmo preciso e uno stile raffinato che non ha quel classico sapore di "già visto". Quella di Jiro e Nahoko è una relazione molto più realistica e immersiva di tante altre storie d'amore viste sul grande e piccolo schermo.</p>
 						<div class="media">
 							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
 						</div>
-						<p>I loro destini infatti si intrecciano per la prima volta su un treno, un incontro che ha del poetico e che ha bisogno di essere visto più volte per essere compreso fino in fondo, essendo molto più ricco di dettagli di quanto sia lecito aspettarsi.</p>
+						<p>I loro destini si intrecciano per la prima volta su un treno: un incontro che ha del poetico e che ha bisogno di essere visto più volte per essere compreso fino in fondo, essendo molto più ricco di dettagli di quanto sia lecito aspettarsi.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
 								<a href="tema_politico_1">&larr; Pagina precedente</a>
