--- a/include/articles/tema_storico_2.html
+++ b/include/articles/tema_storico_2.html
@@ -6,16 +6,16 @@
 						<h2>La crisi economica del 1927-29</h2>
 						<p>Come accennato in precedenza il sisma che colpì la pianura del Kanto ebbe effetti devastanti non solo sulla popolazione giapponese, ma ebbe grosse ripercussioni anche sul sistema economico-finanziario del paese. Il governo nipponico pensò dunque di agevolare l'erogazione di prestiti bancari a chi aveva perduto tutto nel sisma per avviare la ricostruziuone, pur non potendo fornire solide garanzie alle banche, che infatti non furono in grado di far fronte alle numerose richieste di prestiti senza garanzie. Questo comportò la chiusura di moltissime banche di piccola e media importanza, poiché la popolazione preferiva affidarsi agli istituti bancari che potevano godere di una maggiore disponibilità economica diretta.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/storico02.png" target="_blank"><img src="../media/img/storico02.jpg" alt=""></a>
 						</div>
-						<p>Miyazaki ci mostra puntualmente quanto sopra descritto subito dopo l'arrivo di Jiro a Nagoya, recatosi lì per ricevere il suo primo incarico alla Mitsubishi. Lui e Honjo si stanno spostando in macchina dalla stazione ferroviaria verso la sede di lavoro e, durante il tragitto, un folla inferocita si accalca improvvisamente di fronte alla sede della banca Kamehachi, ostruendo il normale transito delle auto. A questo punto Honjo ci illumina su cosa stia accadendo:</p>
+						<p>Miyazaki ci mostra puntualmente quanto sopra descritto subito dopo l'arrivo di Jiro a Nagoya, recatosi lì per ricevere il suo primo incarico alla Mitsubishi. Lui e Honjo si stanno spostando in macchina dalla stazione ferroviaria verso la sede di lavoro e, durante il tragitto, un folla inferocita si accalca improvvisamente di fronte alla sede della banca Kamehachi, ostruendo il normale transito delle auto. A questo punto l'autista ci illumina su cosa stia accadendo:</p>
 						<div class="quote">"Di nuovo?! Stavolta è la banca Kamehachi..."</div>
 						<div class="person"></div>
-						<p>È persino possibile udire distintamente tra le migliaia di voci della folla, alcune frasi di protesta:</p>
-						<div class="quote">"Aprite, aprite!"<br>"Ridate i nostri soldi!"</div>
+						<p>È persino possibile udire distintamente, tra le migliaia di voci della folla, alcune frasi di protesta:</p>
+						<div class="quote">"Aprite, aprite!"<br>"Ridatemi i miei soldi!"</div>
 						<div class="person"></div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/storico03.png" target="_blank"><img src="../media/img/storico03.jpg" alt=""></a>
 						</div>
 						<p>Ancora una volta quindi il regista nipponico ci inserisce in un contesto storico piuttosto buio, soffermandosi nel descrivere tutti gli elementi necessari a far comprendere allo spettatore quanto fosse difficile vivere in quel periodo di recessione, tema più che mai attuale.</p>
 						<div class="colonne clearfix">
