--- a/include/footer.html
+++ b/include/footer.html
@@ -1,11 +1,11 @@
 <div class="button-top clearfix">
-					<a href="#">&#8593;<br>Torna in cima</a>
+					<a href="#"><img src="../assets/plane.png" alt="Torna in cima"><br>Torna in cima</a>
 				</div>
 				</section>
 				<footer>
 					<div class="main-footer clearfix">
-						<small>&copy; 2015 Hintclub S.r.l.s.</small>
-						<div class="legal">All rights reserved</div>
+						<small><a href="credits">Note legali</a></small>
+						<div class="legal">&copy; 2015 Hintclub S.r.l.s., All rights reserved</div>
 					</div>
 				</footer>
 			</div>
