--- a/include/menu.html
+++ b/include/menu.html
@@ -4,13 +4,15 @@
 				<a class="navbutton" href="#" rel="nofollow"></a>
 					<div class="navmenu">
 						<nav>
+							<p class="menutitle">Contenuti</p>
 							<ul>
-							<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
+								<div class="navspazio"></div>
 								<li id="menu-home"><a href="index">Home</a></li>
 									<ul class="submenu sm1">
 										<li id="menu-prefazione"><a href="prefazione">Prefazione</a></li>
 										<li id="menu-intro"><a href="introduzione">Introduzione</a></li>
 									</ul>
+								<li id="menu-personaggi"><a href="personaggi">Personaggi</a></li>
 								<li id="menu-storico"><a href="tema_storico">Il tema storico</a></li>
 									<ul class="submenu sm2">
 										<li id="menu-storico1"><a href="tema_storico_1">Il setting storico e il terremoto</a></li>
@@ -48,13 +50,12 @@
 										<li id="menu-considerazioni2"><a href="considerazioni_2">I bambini e la domanda "Perché?"</a></li>
 										<li id="menu-considerazioni3"><a href="considerazioni_3">L'arte che fa conoscere sè stessi</a></li>
 									</ul>
-									<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
+								<div class="navspazio"></div>
 								<li id="menu-casttecnico"><a href="cast_tecnico">Cast tecnico dello Studio</a></li>
 								<li id="menu-bluray"><a href="bluray">Edizione Blu-ray</a></li>
 								<li id="menu-soundtrack"><a href="soundtrack">Colonna sonora</a></li>
-								<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
+								<div class="navspazio"></div>
 								<li id="menu-credits"><a href="credits">Credits</a></li>
-								<div class="navspazio">&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;&mdash;</div>
 							</ul>
 							<img id="logoghibli" src="../assets/logo_ghibli.png" alt="Studio Ghibli">
 						</nav>
