--- a/include/articles/bluray.html
+++ b/include/articles/bluray.html
@@ -4,9 +4,9 @@
 				<section>
 					<article>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/bluray_cover.jpg" target="_blank"><img src="../media/img/bluray_cover_min.jpg" alt=""></a>
 						</div>
-						<p class="centered"><a href="#" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
+						<p class="centered"><a href="http://www.amazon.it/dp/B00KMYYPZ0/" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
 						<div class="person"></div>
 						<h2>Dati tecnici</h2>
 						<table>
@@ -66,9 +66,9 @@
 						<div class="person"></div>
 						<h2>Sinossi</h2>
 						<p>Jiro sogna di volare e progettare aeroplani ispirandosi al famoso ingegnere aeronautico italiano Gianni Caproni. Miope fin dalla giovane età e pertanto impossibilitato a diventare pilota, nel 1927 entra a lavorare in una delle principali società giapponesi di ingegneria aeronautica. Sono anni importanti quelli per Jiro, perché ha modo di mostrare l'innato talento che lo farà diventare uno dei progettatori aeronautici più affermati al mondo ma soprattutto perché inizia a frequentare la dolce Nahoko, il suo più grande amore, oltre al cielo...</p>
-						<p class="centered"><a href="#" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
+						<p class="centered"><a href="http://www.amazon.it/dp/B00KMYYPZ0/" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
 						<div class="person"></div>
 						<h2>Copyright</h2>
-						<p>&copy; 2014 Luckyred Homevideo. All rights reserved<br>
+						<p>&copy; 2014 Luckyred Homevideo. All rights reserved.<br>
 						&copy; 2013 Nibariki – GNDHDDTK</p>
 					</article>
