--- a/include/articles/cast_tecnico.html
+++ b/include/articles/cast_tecnico.html
@@ -65,9 +65,9 @@
 							</tr>
 						</table>
 						<div class="person"></div>
-						<p class="centered"><a href="#" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
+						<p class="centered"><a href="http://www.amazon.it/dp/B00KMYYPZ0/" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
 						<div class="person"></div>
 						<h2>Copyright</h2>
-						<p>&copy; 2014 Luckyred Homevideo. All rights reserved<br>
+						<p>&copy; 2014 Luckyred Homevideo. All rights reserved.<br>
 						&copy; 2013 Nibariki – GNDHDDTK</p>
 					</article>
