--- a/include/articles/considerazioni_3.html
+++ b/include/articles/considerazioni_3.html
@@ -12,7 +12,7 @@
 						<p>Sono queste le domande che dovrebbero affiorare alla mente, non la classica esclamazione <i>"Che noia, c'è una scena di silenzio! Meglio tornare a messaggiare!"</i>. Non c'è più quella volontà di porsi delle domande, ma solo una forte sete di risposte. Non credo tuttavia che il binomio domanda-risposta sia reversibile: senza domande non ci saranno risposte, così come senza i silenzi non ci sarebbero rumori.</p>
 						<p>Morale della favola? Guardate insieme ai vostri figli i lungometraggi di Miyazaki e fate una gara per scoprire chi ci ha capito di più alla prima visione! E se non avete figli state tranquilli: Totoro, Chihiro, Ponyo e tutti gli altri vi aspetteranno in eterno, nell'olimpo dei più grandi capolavori della storia del cinema d'animazione, senza invecchiare di un solo anno.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/studioghibli.jpg" target="_blank"><img src="../media/img/studioghibli_min.jpg" alt="Studio Ghibli"></a>
 						</div>
 						<h3 class="centered">Miyazaki-san, Domō arigatō.</h3>
 						<div class="colonne clearfix">
