--- a/include/articles/credits.html
+++ b/include/articles/credits.html
@@ -4,9 +4,32 @@
 				<section>
 					<article>
 						<h2>Bibliografia</h2>
-						<p>testo</p>
+						<ul>
+							<li><a href="http://www.wikipedia.org/" target="_blank">Wikipedia.org</a> &ndash; Riferimenti storici, artistici, letterari e temporali</li>
+							<li><a href="http://www.sulgiappone.it/storia-giapponese/periodo-showa" target="_blank">Sulgiappone.it</a> &ndash; Il periodo Shōwa</li>
+							<li><a href="http://www.theatlantic.com/photo/2011/03/1923-kanto-earthquake-echoes-from-japans-past/100025/" target="_blank">The Atlantic Photo</a> &ndash; <i>1923 Kanto Earthquake: Echoes From Japan's Past</i>, foto dei danni provocati dal terremoto del 1923, USGS/George A. Lang Collection</li>
+							<li><a href="http://www.telegraph.co.uk/culture/film/10816014/Hayao-Miyazaki-interview-I-think-the-peaceful-time-that-we-are-living-in-is-coming-to-an-end.html" target="_blank">The Telegraph</a> &ndash; <i>Hayao Miyazaki interview: 'I think the peaceful time that we are living in is coming to an end'</i>, di Robbie Collin, 2014</li>
+							<li><a href="http://blogs.wsj.com/japanrealtime/2013/07/26/miyazakis-film-the-wind-rises-spurring-mixed-emotions/" target="_blank">The Wall Street Journal Blog, JapanRealtime</a> &ndash; <i>Miyazaki's Film 'The Wind Rises' Spurring Mixed Emotions</i>, di Moeko Fujii, 2013</li>
+							<li><a href="http://www.japanfocus.org/-Matthew-Penney/3976" target="_blank">The Asia-Pacific Journal: Japan Focus</a> &ndash; <i>Miyazaki Hayao's Kaze Tachinu</i>, di Matthew Penney, 2013</li>
+							<li><a href="http://www.japanfocus.org/events/view/189" target="_blank">The Asia-Pacific Journal: Japan Focus</a> &ndash; <i>Miyazaki Hayao and the Asia-Pacific War</i>, di Matthew Penney, 2013</li>
+							<li><a href="http://www.fumettologica.it/2015/01/riferimenti-occidentali-si-alza-il-vento-miyazaki/" target="_blank">Fumettologica.it</a> &ndash; <i>I riferimenti occidentali in 'Si alza il vento' di Miyazaki</i>, di Adriano Ercolani, 2015</li>
+							<li><a href="http://www.nationalgeographic.it/popoli-culture/notizie/2014/09/16/foto/s_alza_il_vento_di_miyazaki-2291032/" target="_blank">National Geographic Italia</a> &ndash; <i>Storie di aerei e pionieri del volo: Miyazaki ricorda Caproni</i>, di Eleonora Degano, 2014</li>
+							<li><a href="http://www.animeclick.it/news/40190-si-alza-il-vento-intervista-ad-italo-capronimiyazaki-e-laeronautica" target="_blank">AnimeClick.it</a> &ndash; <i>Si alza il vento, intervista ad Italo Caproni: Miyazaki e l'aeronautica</i>, di キョン, 2014</li>
+							<li><a href="http://www.museocaproni.it/" target="_blank">Museo dell'Aeronautica Gianni Caproni</a></li>
+							<li><a href="http://www.evamonkey.com/writings_anno01.php" target="_blank">Eva Monkey, Evangelion Resource Site</a> &ndash; Dichiarazioni scritte di Hideaki Anno, 1995</li>
+							<li><i>"Poesie Zen"</i>, a cura di Lucien Stryk e Takashi Ikemoto, Ed. Newton Compton, 2010, ISBN 978-88-541-2096-9</li>
+							<li><a href="http://www.luckyred.it/film//wind%20risers/SALV_pressbook_def.pdf" target="_blank">Lucky Red, pressbook per Si Alza il Vento</a>, 2014</li>
+						</ul>
+						<div class="person"></div>
 						<h2>Crediti</h2>
-						<p>testo</p>
-						<h2>Info legali</h2>
-						<p>testo</p>
+						<p>Contenuti testuali e analisi a cura di <a href="http://adinuzzo.hint.club" target="_blank">Andrea Di Nuzzo</a> e Hintclub S.r.l.s..</p>
+						<p>Design, realizzazione tecnica e grafica a cura di <a href="http://mzino.hint.club" target="_blank">Matteo Zino</a> e Hintclub S.r.l.s..</p>
+						<p>Artwork a cura di (creditare qui)</p>
+						<div class="person"></div>
+						<h2>Note legali</h2>
+						<p>Questo lavoro di analisi è un'opera indipendente, parte del portfolio di contenuti offerto dell'azienda Hintclub S.r.l.s. e in nessun modo affiliata con Studio Ghibli o Lucky Red. Tutti i diritti riguardanti nomi, loghi, contenuti audiovisivi e altri trademark sono riservati ai rispettivi detentori di copyright.</p>
+						<p>&copy; 2014 Luckyred Homevideo. All rights reserved.<br>
+						&copy; 2013 Nibariki – GNDHDDTK<br>
+						&copy; Studio Ghibli</p>
+						<div class="person"></div>
 					</article>
