--- a/include/articles/miyazaki_6.html
+++ b/include/articles/miyazaki_6.html
@@ -10,10 +10,10 @@
 						<p>Da queste sue dichiarazioni traspare una certa preoccupazione per il futuro della civiltà mondiale, non solo giapponese, che ci dovrebbe far riflettere ampiamente su quanto la società moderna stia percorrendo una via decisamente impervia. I ritmi frenetici, le situazioni di disagio da parte dei singoli individui si fanno sempre più soverchianti, e sembrano quasi modellare le nostre vite, di cui non siamo più padroni. Situazioni simili vengono descritte all'interno di tutta la pellicola, e quel "cinema di significato" Miyazakiano è più che mai simbolo di impotenza nei confronti del cambiamento feroce.</p>
 						<p>Nessuno può prevedere con esattezza dove ci condurrà questa strada, ma sono più che sicuro che questo film sia stato concepito anche per tutti noi; non viene raccontata solo la storia di Jiro, di Nahoko o di Miyazaki, ma anche la nostra storia, quella che ognuno di noi vive nel quotidiano, immerso in un mare di sabbia finissima che lo trascina giù, proprio come in una clessidra di fragile vetro.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/miyazaki18.png" target="_blank"><img src="../media/img/miyazaki18.jpg" alt=""></a>
 						</div>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/miyazaki19.png" target="_blank"><img src="../media/img/miyazaki19.jpg" alt=""></a>
 						</div>
 						<p>Ed è qui che entra in gioco l'ultima pellicola di Miyazaki, questo è un lungometraggio di cui dovremmo fare tutti tesoro, un'ancora di salvezza per il cuore che ci mostra che i periodi difficili si possono superare, sempre. Ecco il motivo per il quale Jiro risulta un personaggio incredibilmente d'impatto, in cui tutti possiamo e dobbiamo immedesimarci: lui vive il presente rimanendo collegato saldamente al mondo dei suoi sogni, dove può sempre trovare Caproni pronto a ricordargli il motivo per cui ha scelto di iniziare la carriera di progettista di aeroplani. E al tempo stesso riesce a trovare il proprio equilibrio nella vita grazie a dei buoni amici come Honjo e i signori Kurokawa, ma soprattutto grazie alla sua dolce Nahoko, con la quale riesce a vivere momenti di felicità vera che lo aiuteranno a ritrovare sempre il sorriso e la motivazione necessaria ad andare avanti.</p>
 						<h3>Si alza il vento Miyazaki-san, dovremo provare a vivere.</h3>
