--- a/include/articles/prefazione.html
+++ b/include/articles/prefazione.html
@@ -1,16 +1,26 @@
 <header class="clearfix" id="bg-prefazione">
-					<h1>SI ALZA IL VENTO</h1>
+					<h1>PREFAZIONE</h1>
 				</header>
 				<section>
 					<article>
-						<h2>Prefazione</h2>
-						<p>testo</p>
+						<h2>Chi scrive</h2>
+						<div class="media">
+							<img id="cinu" src="../media/img/cinu.jpg" alt="Andrea Di Nuzzo">
+						</div>
+						<p>Mi presento brevemente: sono <a href="http://adinuzzo.hint.club" target="_blank">Andrea Di Nuzzo</a>, classe 1990, studente autonomo di regia, sceneggiatura e storia del cinema. Sono molto appassionato di creatività espressiva in generale e di cinema d'animazione in particolare.</p>
+						<p>La mia passione ha radici profonde: sono partito dai classici Disney, che hanno caratterizzato la mia infanzia, per proseguire poi il mio personalissimo viaggio alla scoperta dei sogni che può regalare questa fantastica forma d'arte grazie anche alle opere targate Studio Ghibli.</p>
+						<p>Con l'intenzione di trasmettere anche ad altri le sensazioni che ritengo possano derivare dalla visione dalle opere di uno degli studi d'animazione più rinomati al mondo, ho deciso di parlare a cuore aperto dell'ultima pellicola del mio regista preferito: Hayao Miyazaki, uno dei fondatori dello Studio stesso.</p>
+						<div class="person"></div>
+						<h2>Disclaimer</h2>
+						<p>Questo lavoro di analisi è un'opera indipendente, parte del portfolio di contenuti offerto dell'azienda Hintclub S.r.l.s. e in nessun modo affiliata con Studio Ghibli o Lucky Red. Tutti i diritti riguardanti nomi, loghi, contenuti audiovisivi e altri trademark sono riservati ai rispettivi detentori di copyright.</p>
+						<div class="person"></div>
+						<h3>Varchiamo insieme la soglia della fantasia dunque, e prapariamoci ad un'avventura indimenticabile.</h3>
 						<div class="colonne clearfix">
 							<div class="previous">
-								<a href="index">&larr; Pagina precedente</a>
+								<a href="index">&larr; Homepage</a>
 							</div>
 							<div class="next">
-								<a href="introduzione">Pagina successiva &rarr;</a>
+								<a href="introduzione">Introduzione &rarr;</a>
 							</div>
 						</div>
 					</article>
