--- a/include/articles/tema_amoroso_3.html
+++ b/include/articles/tema_amoroso_3.html
@@ -14,7 +14,7 @@
 						</div>
 						<p>Ci sono due citazioni che esprimono al meglio questo concetto: la prima è di Kurokawa:</p>
 						<div class="quote">
-							"Dichiaro! Vi è qui un uomo di ottusa scempiaggine, senza nemmeno un tetto per proteggersi da pioggia e rugiada... Se vi andasse bene ugualmente, vi prego, entrate."
+							"Dichiaro! Senza neanche un tetto contro pioggia e rugiada, vi è qui un uomo d'ottusa scempiaggine! Se... se vi andasse bene lo stesso, entrate, per favore."
 						</div>
 						<div class="person"></div>
 						<div class="media">
@@ -26,17 +26,21 @@
 						</div>
 						<p>L'altra citazione invece è dello stesso Jiro, che confessa alla sorella Kayo, nel frattempo diventata medico, di aver compreso pienamente la gravità della situazione di Nahoko:</p>
 						<div class="quote">
-							"Noialtri viviamo ogni giorno come un dono, facendo grande tesoro di ogni momento."
+							"Noialtri adesso stiamo vivendo di giorno in giorno, facendo d'ogni giorno grandissimo tesoro."
 						</div>
 						<div class="person"></div>
 						<p>Colpisce in particolar modo la volontà di Nahoko di mostrarsi sempre in forze e presentabile, cercando di mantenere intatta la sua bellezza per non far preoccupare Jiro, che ce la mette tutta per passare più tempo possibile con quella che è finalmente diventata sua moglie.</p>
-						<p>Vorrei inoltre sottolineare un ultimo dettaglio, questa volta legato al comparto degli effetti sonori. La scena in cui Jiro stringe la mano di Nahoko mentre è costretto a lavorare tutta la notte, è a mio parere un capolavoro. Lui vorrebbe fumare una sigaretta ma lei non vuole staccarsi dalla sua mano: entrambi però ritengono che valga la pena godersi il momento e rimanere vicini (anche se il fumo di una sigaretta non fa certo bene ai polmoni), poiché il tempo a disposizione della ragazza è ormai agli sgoccioli. E mentre ci godiamo uno splendido silenzio che dice più di mille parole, veniamo bruscamente presi alla sprovvista dal forte rumore di una pistola pneumatica, che ci riporta nell'hangar dove Jiro sta seguendo l'assemblaggio del suo aereo. Ancora una volta Miyazaki ci sorprende con una scelta stilistica di grande impatto: sceglie volutamente di inserire un rumore brusco ad alto volume per accompagnare un cambio di scena che ci ricorda che i momenti magici tra Jiro e Nahoko sono come un sogni, bruscamente interrotti dalla realtà a cui devono far fronte.</p>
+						<p>Vorrei inoltre sottolineare un ultimo dettaglio, questa volta legato al comparto degli effetti sonori. La scena in cui Jiro stringe la mano di Nahoko mentre è costretto a lavorare tutta la notte è a mio parere un capolavoro. Lui vorrebbe fumare una sigaretta, ma lei non vuole staccarsi dalla sua mano: entrambi però ritengono che valga la pena godersi il momento e rimanere vicini (anche se il fumo di una sigaretta non fa certo bene ai polmoni), poiché il tempo a disposizione della ragazza è ormai agli sgoccioli. E mentre ci godiamo uno splendido silenzio che dice più di mille parole, veniamo bruscamente presi alla sprovvista dal forte rumore di una pistola pneumatica, che ci riporta nell'hangar dove Jiro sta seguendo l'assemblaggio del suo aereo. Ancora una volta Miyazaki ci sorprende con una scelta stilistica di grande impatto: sceglie volutamente di inserire un rumore brusco e ad alto volume per accompagnare un cambio di scena che ci ricorda che i momenti magici tra Jiro e Nahoko sono come un sogni, bruscamente interrotti dalla realtà a cui devono far fronte.</p>
 						<div class="media">
-							<a href="../media/img/amore_15.png" target="_blank"><img src="../media/img/amore_15.jpg" alt=""></a>
+							<video controls preload="metadata">
+								<source src="../media/video/trailer.mp4" type="video/mp4">
+								<source src="../media/video/trailer.webm" type="video/webm">
+								Il file video non funziona? Scaricalo <a href="../media/audio/trailer.mp4">qui</a>.
+							</video>
 						</div>
-						<p>Il finale è invece un grossissimo pugno nello stomaco, sfido chiunque a non versare nemmeno una lacrima. La giovane decide di tornare di nascosto al sanatorio montano, poiché ha compreso che il tempo a sua disposizione è terminato. La coltellata emotiva questa volta ce la infligge la signora Kurokawa, che dice:</p>
+						<p>Il finale è invece un grandissimo pugno nello stomaco, sfido chiunque a non versare nemmeno una lacrima. La giovane decide di tornare di nascosto al sanatorio montano, poiché ha compreso che il tempo a sua disposizione è terminato. La coltellata emotiva questa volta ce la infligge la signora Kurokawa, che dice:</p>
 						<div class="quote">
-							"Lei voleva mostrarsi al suo amato soltanto nei momenti più belli..."
+							"Voleva farsi vedere dal suo amato soltanto nel suo splendore..."
 						</div>
 						<div class="person"></div>
 						<div class="media">
@@ -49,13 +53,13 @@
 						<p>È quello stesso vento che li ha fatti incontrare infine a portare la brutta notizia a Jiro, il quale sta assistendo al volo di prova del suo primo prototipo di "Zero". Una folata leggera come la sua dolce metà gli annuncia idealmente che Nahoko non c'è più, una notizia che ammutolisce persino il comparto sonoro del film, il quale ci fa sentire soltanto il fruscio del vento.</p>
 						<p>Ritroviamo poi nell'ultima scena Jiro in compagnia del Conte Caproni, nel mondo dei loro sogni, tristemente decorato dalle carcasse dei suoi stessi aerei. Il nostro protagonista è visibilmente affranto, ma quando rivede Nahoko che lo esorta ad andare avanti trova la forza di sorridere, sostenuto per l'ultima volta dalla sua amata moglie.</p>
 						<div class="media">
-							<a href="../media/img/missing.png" target="_blank"><img src="../media/img/missing.jpg" alt=""></a>
+							<a href="../media/img/amore_16.png" target="_blank"><img src="../media/img/amore_16.jpg" alt=""></a>
 						</div>
-						<p class="curiosita"><b>Curiosità:</b> Nel documentario intitolato <i>"The Kingdom of Dreams and Madness"</i>, che si basa sulla realizzazione in studio del film, sentiamo Miyazaki istruire alcuni disegnatori sull'ultima scena: inizialmente infatti l'idea era quella di far dire a Nahoko la battuta: <i>"Vieni mio caro, vieni"</i>. Fortunatamente quel pezzo è stato poi cambiato con un'esortazione a vivere, altrimenti avrei pianto persino dall'anima.</p>
-						<p>Il vento dunque recita un ruolo importantissimo anche in questa pellicola finale del regista nipponico (come in molte delle sue produzioni): è simbolo di cambiamento, sussura brutte notizie e ricongiunge un amore che sembrava smarrito o dimenticato. È vero, il protagonista del film è Jiro Horikoshi, ma il vento si erge ancora una volta come una romantica brezza, che soffia delicatamente forti emozioni nei nostri cuori.<p>
-						<p>Un'ultima menzione sul tema del matrimonio la merita sicuramente il personaggio di Honjo. A lui vengono affidate le critiche al governo e le spiegazioni storiche, che ci inseriscono in uno splendido setting narrativo. Tuttavia ci offre anche un curioso punto di vista sul sentimento amoroso che si scontra un po' con quello dello stesso Jiro. Verso la fine della scena di dialogo che denuncia la povertà delle famiglie giapponesi, accompagnata da tè e Siberia, Honjo dice con fare noncurante:</p>
+						<p class="curiosita"><b>Curiosità:</b> Nel documentario intitolato <i>"The Kingdom of Dreams and Madness"</i>, che si basa sulla realizzazione in studio del film, sentiamo Miyazaki istruire alcuni disegnatori sull'ultima scena. Inizialmente l'idea era quella di far dire a Nahoko la battuta: <i>"Vieni mio caro, vieni"</i>. Fortunatamente quel pezzo è stato poi cambiato con un'esortazione a vivere, altrimenti avrei pianto persino dall'anima.</p>
+						<p>Il vento dunque recita un ruolo importantissimo anche in questa pellicola finale del regista nipponico, come in molte delle sue altre produzioni: è simbolo di cambiamento, sussura brutte notizie e ricongiunge un amore che sembrava smarrito o dimenticato. È vero, il protagonista del film è Jiro Horikoshi, ma il vento si erge ancora una volta come una romantica brezza che soffia delicatamente forti emozioni nei nostri cuori.<p>
+						<p>Un'ultima menzione sul tema del matrimonio la merita sicuramente il personaggio di Honjo. A lui vengono affidate le critiche al governo e le spiegazioni storiche, che ci inseriscono in uno splendido setting narrativo. Tuttavia ci offre anche un curioso punto di vista sul sentimento amoroso che si scontra un po' con quello dello stesso Jiro. Verso la fine della scena di dialogo che denuncia la povertà delle famiglie giapponesi, accompagnata da tè e siberia, Honjo dice con fare noncurante:</p>
 						<div class="quote">
-							"Domani faccio una scappata a Tokyo, vado a prendere moglie. Per mettersi seriamente d'impegno con il lavoro ci vuole un focolare domestico. È un paradosso anche questo."
+							"Domani faccio una scappata a Tokyo. Vado a prendere moglie. [...] Per mettersi seriamente d'impegno nel lavoro ci vuole un focolare domestico. È un paradosso anche questo!"
 						</div>
 						<div class="person"></div>
 						<p>Questa affermazione ci lascia intendere che il suo concetto di amore e conseguentemente di matrimonio è decisamente più materialistico di quello del nostro occhialuto protagonista, il quale guarda all'amore con sincerità e semplicità, un sentimento fatto di momenti da vivere insieme che fungono da solido appiglio a cui aggrapparsi durante le forti folate di vento che la vita gli spedisce contro. Per Honjo invece il matrimonio, sembra essere piuttosto una <i>condicio sine qua non</i>, che gli garantisca una certà stabilità casalinga per consentirgli di concentrarsi al massimo solamente sul proprio mestiere.</p>
