--- a/www/css/style.css
+++ b/www/css/style.css
@@ -72,11 +72,6 @@ nav {
 	font-style: italic;
 	display: none;
 }
-.navspazio {
-	margin: -8px auto;
-	box-sizing: border-box;
-	color: #f6e48c;
-}
 a {
 	color: #111;
 	text-decoration: none;
@@ -105,10 +100,6 @@ h1 {
 }
 .centered {
 	text-align: center;
-}
-.alert {
-	color: #f00;
-	text-decoration: underline;
 }
 article {
 	text-align: justify;
@@ -182,6 +173,20 @@ article {
 	padding: 0 20px;
 	box-sizing: border-box;
 	margin: 40px auto;
+}
+.menutitle {
+	font-size: 26px;
+	font-size: 1.625rem;
+	text-align: center;
+	margin: 0;
+}
+.button-top a {
+	color: #666;
+	font-size: 12px;
+	font-size: 0.75rem;
+}
+.button-top a:hover {
+	color: #333;
 }
 /* ===============
 BACKGROUNDS
@@ -285,6 +290,7 @@ MENU IDENTIFIERS
 body#menu-home li#menu-home,
 body#menu-prefazione li#menu-prefazione,
 body#menu-intro li#menu-intro,
+body#menu-personaggi li#menu-personaggi,
 body#menu-storico li#menu-storico,
 body#menu-storico1 li#menu-storico1,
 body#menu-storico2 li#menu-storico2,
@@ -314,7 +320,6 @@ body#menu-casttecnico li#menu-casttecnico,
 body#menu-bluray li#menu-bluray,
 body#menu-soundtrack li#menu-soundtrack,
 body#menu-credits li#menu-credits {
-	font-style: italic;
 	background: #68B3F4; /* fallback */
 	background: -webkit-gradient(linear, left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 25%, rgba(255,255,255,.7) 100%); /* Saf4+, Chrome */
 	background:  -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 25%, rgba(255,255,255,.7) 100%); /* Chrome 10+, Saf5.1+ */
@@ -368,6 +373,7 @@ nav ul {
 ul {
 	padding: 0 0 0 25px;
 	padding: 0 0 0 1.563rem;
+	margin: 0;
 }
 header,
 section,
@@ -427,18 +433,29 @@ header {
 	}
 }
 section {
-	margin: 60px 0;
-	margin: 3.75rem 0;
+	margin: 60px 0 30px 0;
+	margin: 3.75rem 0 1.875rem 0;
 }
 .colonne {
 	width: 100%;
-	margin: 60px auto;
+	margin: 90px auto 0 auto;
 }
 .button-top {
 	width: 200px;
 	display: table;
-	margin: 50px auto;
+	margin: 50px auto 15px auto;
 	text-align: center;
+	line-height: 18px;
+	line-height: 1.125rem;
+}
+.navspazio {
+    content: "";
+    display: block;
+    height: 1px;
+    box-shadow: 1px 1px 2px #333;
+    width: 250px;
+    margin: 10px 0;
+    background: #f6e48c;
 }
 /* ===============
 MEDIA
@@ -482,6 +499,10 @@ MEDIA
 	margin: 10px auto;
 	margin: 0.625rem auto;
 }
+#cinu {
+	width: 350px;
+	width: 21.88rem;
+}
 /* ===============
 NAVIGATION BUTTON
 =============== */
@@ -495,7 +516,7 @@ NAVIGATION BUTTON
 	background: url("../../assets/navbutton.svg") 0 -32px no-repeat;
 	height: 32px;
 	left: 30px;
-	left: 2.14285714rem;
+	left: 2.143rem;
 	top: 36px;
 	top: 2.571rem;
 	-webkit-transition: none;
@@ -581,4 +602,43 @@ td {
 	border: 1px solid #ddd;
 	padding: 5px 8px;
 	padding: 0.3125rem  0.5rem;
+}
+/* ===============
+HOMEPAGE SPECIFIC FIXES
+=============== */
+body#menu-home .grid {
+	background: url("../../assets/bg/home_cover.jpg") no-repeat; /* fallback */
+	background: -webkit-gradient(linear, left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
+	background:  -webkit-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
+	background:     -moz-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
+	background:      -ms-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
+	background:       -o-linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
+	background:          linear-gradient(left, rgba(255,255,255,.1) 0%, rgba(255,255,255,.15) 50%, rgba(255,255,255,1) 100%), url("../../assets/bg/home_cover.jpg") no-repeat;
+	background-size: 800px auto;
+	background-color: #fff;
+}
+body#menu-home h1,
+body#menu-home h2 {
+	color: #f6e48c;
+	text-align: center;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, .7), -1px -1px 2px rgba(0, 0, 0, .7);
+	margin: 50px auto;
+}
+body#menu-home h3 {
+	color: #fff;
+	text-align: center;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, .7), -1px -1px 1px rgba(0, 0, 0, .7);
+	margin: 50px auto 20px auto;
+}
+body#menu-home h4 {
+	color: #fff;
+	text-align: center;
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, .7), -1px -1px 1px rgba(0, 0, 0, .7);
+	margin: 20px auto;	
+}
+body#menu-home section {
+	min-height: 800px;
+}
+body#menu-home .button-top {
+	display: none;
 }
